Fixation of max width, when task name is too long

--- a/styles/app-frame.css
+++ b/styles/app-frame.css
@@ -4,6 +4,8 @@
 
     background-color: var(--app-background-color);
     box-shadow: 0 2px 4px var(--app-box-shadow-color);
-    min-width: 56vw;
+    min-width: fit-content;
+    width: 56vw;
+    max-width: 56vw;
     min-height: 67vh;
 }
